# relreps

./: .pre-commit-config.yaml  .rsyncignore  README.md  env.yaml  exec.sh  mkdocs.yml  multirun_ae_commands.sh  multirun_commands.txt  multirun_machine1.sh  multirun_machine2.sh  multirun_machine3.sh  multirun_machine4.sh  multirun_machine5.sh  multirun_machine6.sh  multirun_rae_commands.sh  multirun_vae_commands.sh  pyproject.toml  setup.cfg  sweep.yaml  sync.sh  versions.json
.dvc/: config
.github/workflows/: publish.yml  test_suite.yml.bak
0.0/: 404.html  index.html
0.0/search/: search_index.json
conf/: default.yaml
conf/nn/: default.yaml  text.yaml  vision.yaml
conf/train/: classification.yaml  default.yaml  reconstruction.yaml
data/: .gitignore  amazon_reviews_translated.dvc  anchor_dataset.dvc  synset_info.tsv.dvc
data/gensim/: .gitignore  restricted.dvc
data/hf_datasets/: .gitignore  N24News.dvc
data/latents/: .gitignore  amazon_reviews_multi.dvc  amazon_reviews_multi_en.dvc  cifar100.dvc  dbpedia_14.dvc  multilingual_amazon.dvc  trec.dvc
data/wikimatrix/: .gitignore  aligned.dvc
experiments/: self_supervision.ipynb
experiments/demo/: relreps_demo.ipynb
experiments/fig:latent-rotation-comparison/: .gitignore  ae.pdf.dvc  anchor_infos.pt.dvc  anchor_infos_cifar10_train_0.4.pt.dvc  anchor_infos_cv.pt.dvc  checkpoints.dvc  embeddings-qualitative-cifar10_train_0.4-first_dims.pdf.dvc  encoded_data.dvc  rel_ae.pdf.dvc  (+25 more)
latest/: 404.html  index.html
notebooks/: test_multihead.ipynb
tests/: conftest.py  test_checkpoint.py  test_resume.py
(+245 files in other folders)
